--- a/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
@@ -445,7 +445,7 @@
             }
             showWishlistCount();
         });
-        @*let btn = document.getElementById('btnSubs');
+        let btn = document.getElementById('btnSubs');
         $(document).ready(function () {
             $('#subscribeForm').submit(function (e) {
                 e.preventDefault();
@@ -476,7 +476,7 @@
                 });
             });
 
-        });*@
+        });
     </script>
     @RenderSection("js", required: false)
     <!--Start of Tawk.to Script-->
