--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Orders/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Orders/Details.cshtml
@@ -138,6 +138,12 @@
                             </div>
                         </div>
                         <div class="form-group row">
+                            <label asp-for="@user.Adress" class="col-sm-2 col-form-label"></label>
+                            <div class="col-sm-10">
+                                <p class="form-control">@user.Adress</p>
+                            </div>
+                        </div>
+                        <div class="form-group row">
                             <label asp-for="@user.PhoneNumber" class="col-sm-2 col-form-label"></label>
                             <div class="col-sm-10">
                                 <p class="form-control">@user.PhoneNumber</p>
