--- a/Auto-Part/Auto-Part-WebUI/Views/Account/Profile.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Account/Profile.cshtml
@@ -130,6 +130,10 @@
                                 <label>Mağaza Adı</label>
                                 <p class="form-control">@Model.ECoPartUser.StoreName</p>
                             </div>
+                            <div class="col-sm-6">
+                                <label>Mağaza Ünvanı</label>
+                                <p class="form-control">@Model.ECoPartUser.Adress</p>
+                            </div>
                         </div>
 
                         <label>Email Address</label>
