--- a/Auto-Part/Auto-Part-WebUI/Views/Account/Register.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Account/Register.cshtml
@@ -49,11 +49,17 @@
                                     <div class="form-group mb-3">
                                         <input class="form-control" asp-for="Surname" placeholder="Soyad *" />
                                     </div>
+                                    <div class="form-group mb-3">
+                                        <input class="form-control" asp-for="Username" placeholder="İstifadəçi adı *" />
+                                    </div>
                                     <div class="form-group">
                                         <input class="form-control" asp-for="PhoneNumber" placeholder="Mobil Nömrə *" />
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" asp-for="StoreName" placeholder="Mağaza adı (Onlayn Mağazadısa Sosial şəbəkədə adı) *" />
+                                    </div>
+                                    <div class="form-group">
+                                        <input class="form-control" asp-for="Adress" placeholder="Mağaza ünvanı *" />
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" asp-for="Password" placeholder="Şifrə *" />
