--- a/Auto-Part/Auto-Part-WebUI/Views/Account/SignIn.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Account/SignIn.cshtml
@@ -40,7 +40,7 @@
                                         </div>
                                     }
                                     <div class="form-group mb-3">
-                                        <input class="form-control" asp-for="Email" placeholder="E-Poçt *" />
+                                        <input class="form-control" asp-for="UserName" placeholder="E-Poçt və ya İstifadəçi Adı *" />
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" asp-for="Password" placeholder="Şifrə *" />
