--- a/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
@@ -40,10 +40,10 @@
     <link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/libs/tab-control/tab-control.css">
     <!-- Main CSS File -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     @RenderSection("css", required: false)
     <link rel="stylesheet" type="text/css" href="~/assets/css/style.min.css">
     <link rel="stylesheet" type="text/css" href="~/assets/css/demo23.min.css">
-
 
 </head>
 
