--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Index.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Index.cshtml
@@ -84,7 +84,7 @@
                                     @item.PartCodeName
                                 </td>
                                 <td>
-                                    @item.Quantity
+                                    @item.Quantity ədəd
                                 </td>
 
 
