--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Create.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Create.cshtml
@@ -97,6 +97,10 @@
                                     <div id="productList" class="row">
 
                                     </div>
+                                    <span>Seçilmiş kodlar:</span>
+                                    <span id="selectedPartCodes"></span>
+                                    <br />
+                                    <a id="partCodeRefresh" class="btn btn-mat btn-info text-white"><i class="icofont-refresh"></i>Yeniləyin</a>
                                     @foreach (var code in ViewBag.Codes)
                                     {
                                         <tr class="code-checkbox">
@@ -113,7 +117,9 @@
 
                                 </tbody>
                             </table>
-
+                            <div class="col-md-12 text-center">
+                                <ul class="pagination pagination-lg pager" id="myPager"></ul>
+                            </div>
                         </div>
 
                         <div class="tab-page" id="pricing" aria-title="Qiymetlendirme">
@@ -123,9 +129,12 @@
                                         <th>Növ</th>
                                         <th>Qiymət</th>
                                         <th class="table-operations">
-                                            <button class="btn btn-info" onclick="createPricing(event)">
-                                                Add row
-                                            </button>
+                                            <a class="btn btn-mat btn-success text-white" onclick="createPricing(event)">
+                                                <i class="icofont-ui-add"></i> Add row
+                                            </a>
+                                            <a class="btn btn-mat btn-danger text-white" onclick="removePricing(event)">
+                                                <i class="icofont-bin"></i> Delete Row
+                                            </a>
                                         </th>
                                     </tr>
                                 </thead>
@@ -134,9 +143,7 @@
                             </table>
                         </div>
                     </div>
-                    <div class="col-md-12 text-center">
-                        <ul class="pagination pagination-lg pager" id="myPager"></ul>
-                    </div>
+                    
                 </div>
                 <div class="col-12">
                     <div class="form-group">
@@ -182,7 +189,57 @@
         }
 
         $(document).ready(function () {
+            let selectedPartCodeNames = [];
+            $('#partCodeRefresh').click(function () {
+                selectedPartCodeNames = [];
+                $('input[data-code-id]').each(function (index, item) {
+                    if (item.checked) {
 
+                        let data = $(item).data();
+                        let codeId = data.codeId;
+                        let partCodeName = $(`#code-${codeId}`).html();
+                        selectedPartCodeNames.push(partCodeName);
+                        console.log(selectedPartCodeNames)
+                        $('#selectedPartCodes').html(selectedPartCodeNames.toString());
+                    }
+                    else if (!item.checked) {
+                        let data = $(item).data();
+                        let codeId = data.codeId;
+                        let partCodeName = $(`#code-${codeId}`).html();
+                        for (var i = 0; i < selectedPartCodeNames.length; i++) {
+                            if (selectedPartCodeNames[i] == partCodeName) {
+                                selectedPartCodeNames.splice(i, 1);
+                            }
+                        }
+                        $('#selectedPartCodes').html(selectedPartCodeNames.toString());
+                    }
+                });
+            })
+
+
+            $('input[data-code-id]').change(function changePartCodeInput(e) {
+                if (e.currentTarget.checked) {
+
+                    let data = $(e.currentTarget).data();
+                    let codeId = data.codeId;
+                    let partCodeName = $(`#code-${codeId}`).html();
+                    selectedPartCodeNames.push(partCodeName);
+                    console.log(selectedPartCodeNames)
+                    $('#selectedPartCodes').html(selectedPartCodeNames.toString());
+                }
+                else if (!e.currentTarget.checked) {
+                    let data = $(e.currentTarget).data();
+                    let codeId = data.codeId;
+                    let partCodeName = $(`#code-${codeId}`).html();
+                    for (var i = 0; i < selectedPartCodeNames.length; i++) {
+                        if (selectedPartCodeNames[i] == partCodeName) {
+                            selectedPartCodeNames.splice(i, 1);
+                        }
+                    }
+                    $('#selectedPartCodes').html(selectedPartCodeNames.toString());
+                }
+
+            });
 
 
             $('#productCreate').submit(function (e) {
@@ -291,7 +348,7 @@
             e.preventDefault();
 
             const tBody = $(e.currentTarget).closest('table').find('tbody');
-            const tr = $(`<tr>
+            const tr = $(`<tr class="pricingTr">
                             <td>${(selectTypes.replace('#s1#',  newid()))}</td>
                             <td><input type="text"/></td>
                             </tr>`);
@@ -310,7 +367,7 @@
             if ($(e.currentTarget).closest('tbody').find('tr').length == 1)
                 return;
 
-            $(e.currentTarget).closest('tr').remove();
+            $('tr.pricingTr').remove();
         }
 
         function newid() {
