--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Products/Details.cshtml
@@ -71,6 +71,32 @@
                     </div>
                 </div>
                 <div class="form-group row">
+                    <label asp-for="Quantity" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.Quantity ədəd</p>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label asp-for="Pricings" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        @foreach (var price in ViewBag.Pricings)
+                        {
+                            if (Model.Id == price.ProductId)
+                            {
+                                foreach (var type in ViewBag.Types)
+                                {
+                                    if (type.Id == price.TypeId)
+                                    {
+                                        <p class="form-control">@price.Price&#8380;<span style="color: #aaa;margin-left:0.5rem;font-size:14px;">(@type.Name)</span></p>
+                                    }
+                                }
+                            }
+                        }
+
+                    </div>
+                </div>
+
+                <div class="form-group row">
                     <label class="col-sm-2"></label>
                     <div class="col-sm-10">
                         <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning btn-icon"><i class="icofont-pencil-alt-5"></i></a> |
