--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <!-- Favicon icon -->
     <link rel="icon" href="~/admin/files/assets/images/favicon.ico" type="image/x-icon">
     <!-- Google font-->
-    <link href="~/admin/https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
     <!-- Required Fremwork -->
     <link rel="stylesheet" type="text/css" href="~/admin/files/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- feather Awesome -->
@@ -462,6 +462,15 @@
                                         <a asp-controller="orders" asp-action="index">
                                             <span class="pcoded-micon"><i class="fa-solid fa-basket-shopping"></i></span>
                                             <span class="pcoded-mtext">Sifarişlər</span>
+                                        </a>
+                                    </li>
+                                }
+                                @if (User.HasAccess("admin.popularCars.index"))
+                                {
+                                    <li class="">
+                                        <a asp-controller="popularCars" asp-action="index">
+                                            <span class="pcoded-micon"><i class="icofont-car-alt-2"></i></span>
+                                            <span class="pcoded-mtext">Xadavoy Maşınlar</span>
                                         </a>
                                     </li>
                                 }
