--- a/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Users/Details.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Areas/Admin/Views/Users/Details.cshtml
@@ -64,6 +64,12 @@
                     </div>
                 </div>
                 <div class="form-group row">
+                    <label asp-for="Adress" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-10">
+                        <p class="form-control">@Model.Adress</p>
+                    </div>
+                </div>
+                <div class="form-group row">
                     <div class="col-12">
                         <div class="tab-control" role="tabcontrol">
                             <div class="tab-page" id="roles" aria-title="Rollar" selected>
