--- a/Auto-Part/Auto-Part-WebUI/Views/Home/About.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿    <section class="customer-section pb-10 appear-animate">
-                    <div class="container">
+                    <div class="container mt-10">
                         <div class="row align-items-center">
                             <div class="col-md-7 mb-4">
                                 <figure>
