--- a/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
         };
         (function (d) {
             var wf = d.createElement('script'), s = d.scripts[0];
-            wf.src = 'js/webfont.js';
+            wf.src = '/assets/js/webfont.js';
             wf.async = true;
             s.parentNode.insertBefore(wf, s);
         })(document);
@@ -40,7 +40,6 @@
     <link href="~/libs/toastr.js/toastr.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="~/libs/tab-control/tab-control.css">
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     @RenderSection("css", required: false)
     <link rel="stylesheet" type="text/css" href="~/assets/css/style.min.css">
     <link rel="stylesheet" type="text/css" href="~/assets/css/demo23.min.css">
@@ -212,42 +211,42 @@
             <i class="d-icon-home"></i>
             <span>Home</span>
         </a>
-        <a href="~/assets/demo23-shop.html" class="sticky-link">
+        <a asp-action="Index" asp-controller="Shop" class="sticky-link">
             <i class="d-icon-volume"></i>
-            <span>Categories</span>
+            <span>Bütün Məhsullar</span>
         </a>
-        <a href="~/assets/wishlist.html" class="sticky-link">
+        <a asp-controller="Shop" asp-action="Wishlist" class="sticky-link">
             <i class="d-icon-heart"></i>
             <span>Wishlist</span>
         </a>
-        <a href="~/assets/account.html" class="sticky-link">
+        <a asp-controller="account" asp-action="profile" class="sticky-link">
             <i class="d-icon-user"></i>
             <span>Account</span>
         </a>
         <div class="header-search hs-toggle dir-up">
-            <a href="~/assets/#" class="search-toggle sticky-link">
+            <a href="#" class="search-toggle sticky-link">
                 <i class="d-icon-search"></i>
                 <span>Search</span>
             </a>
-            <form action="#" class="input-wrapper">
-                <input type="text" class="form-control" name="search" autocomplete="off"
-                       placeholder="Search your keyword..." required />
+            <form method="get" asp-controller="Shop" asp-action="Search" class="input-wrapper">
+                <input type="text" class="form-control" id="search" name="query" placeholder="Axtardığınız məhsulun kodunu daxil edin ..." autocomplete="off"
+                       required />
                 <button class="btn btn-search" type="submit">
                     <i class="d-icon-search"></i>
                 </button>
             </form>
         </div>
     </div>
-    <a id="scroll-top" href="~/assets/#top" title="Top" role="button" class="scroll-top"><i class="d-icon-arrow-up"></i></a>
+    <a id="scroll-top" href="#" title="Top" role="button" class="scroll-top"><i class="d-icon-arrow-up"></i></a>
 
     <div class="mobile-menu-wrapper">
         <div class="mobile-menu-overlay">
         </div>
-        <a class="mobile-menu-close" href="~/assets/#"><i class="d-icon-times"></i></a>
+        <a class="mobile-menu-close" href="#"><i class="d-icon-times"></i></a>
         <div class="mobile-menu-container scrollable">
-            <form action="#" class="input-wrapper">
-                <input type="text" class="form-control" name="search" autocomplete="off"
-                       placeholder="Search your keyword..." required />
+            <form method="get" asp-controller="Shop" asp-action="Search" class="input-wrapper">
+                <input type="text" class="form-control" id="search" name="query" placeholder="Axtardığınız məhsulun kodunu daxil edin ..." autocomplete="off"
+                       required />
                 <button class="btn btn-search" type="submit">
                     <i class="d-icon-search"></i>
                 </button>
@@ -257,130 +256,10 @@
                     <a asp-action="index" asp-controller="home">Home</a>
                 </li>
                 <li>
-                    <a href="~/assets/demo23-shop.html">Categories</a>
-                    <ul>
-                        <li>
-                            <a href="~/assets/#">
-                                Variations 1
-                            </a>
-                            <ul>
-                                <li><a href="~/assets/shop-banner-sidebar.html">Banner With Sidebar</a></li>
-                                <li><a href="~/assets/shop-boxed-banner.html">Boxed Banner</a></li>
-                                <li><a href="~/assets/shop-infinite-scroll.html">Infinite Ajaxscroll</a></li>
-                                <li><a href="~/assets/shop-horizontal-filter.html">Horizontal Filter</a></li>
-                                <li>
-                                    <a href="~/assets/shop-navigation-filter.html">
-                                        Navigation Filter<span class="tip tip-hot">Hot</span>
-                                    </a>
-                                </li>
-
-                                <li><a href="~/assets/demo23-shop.html">Off-Canvas Filter</a></li>
-                                <li><a href="~/assets/shop-right-sidebar.html">Right Toggle Sidebar</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="~/assets/#">
-                                Variations 2
-                            </a>
-                            <ul>
-
-                                <li>
-                                    <a href="~/assets/shop-grid-3cols.html">
-                                        3 Columns Mode<span class="tip tip-new">New</span>
-                                    </a>
-                                </li>
-                                <li><a href="~/assets/shop-grid-4cols.html">4 Columns Mode</a></li>
-                                <li><a href="~/assets/shop-grid-5cols.html">5 Columns Mode</a></li>
-                                <li><a href="~/assets/shop-grid-6cols.html">6 Columns Mode</a></li>
-                                <li><a href="~/assets/shop-grid-7cols.html">7 Columns Mode</a></li>
-                                <li><a href="~/assets/shop-grid-8cols.html">8 Columns Mode</a></li>
-                                <li><a href="~/assets/shop-list.html">List Mode</a></li>
-                            </ul>
-                        </li>
-                    </ul>
+                    <a asp-action="Index" asp-controller="Shop">Bütün Məhsullar</a>
                 </li>
                 <li>
-                    <a href="~/assets/demo23-product.html">Products</a>
-                    <ul>
-                        <li>
-                            <a href="~/assets/#">Product Pages</a>
-                            <ul>
-                                <li><a href="~/assets/product-simple.html">Simple Product</a></li>
-                                <li><a href="~/assets/product.html">Variable Product</a></li>
-                                <li><a href="~/assets/product-sale.html">Sale Product</a></li>
-                                <li><a href="~/assets/product-featured.html">Featured &amp; On Sale</a></li>
-
-                                <li><a href="~/assets/product-left-sidebar.html">With Left Sidebar</a></li>
-                                <li><a href="~/assets/product-right-sidebar.html">With Right Sidebar</a></li>
-                                <li>
-                                    <a href="~/assets/product-sticky-cart.html">
-                                        Add Cart Sticky<span class="tip tip-hot">Hot</span>
-                                    </a>
-                                </li>
-                                <li><a href="~/assets/product-tabinside.html">Tab Inside</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="~/assets/#">Product Layouts</a>
-                            <ul>
-                                <li><a href="~/assets/product-grid.html">Grid Images<span class="tip tip-new">New</span></a></li>
-                                <li><a href="~/assets/product-masonry.html">Masonry</a></li>
-                                <li><a href="~/assets/product-gallery.html">Gallery Type</a></li>
-                                <li><a href="~/assets/product-full.html">Full Width Layout</a></li>
-                                <li><a href="~/assets/product-sticky.html">Sticky Info</a></li>
-                                <li><a href="~/assets/product-sticky-both.html">Left &amp; Right Sticky</a></li>
-                                <li><a href="~/assets/product-horizontal.html">Horizontal Thumb</a></li>
-
-                                <li><a href="~/assets/#">Build Your Own</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="~/assets/#">Pages</a>
-                    <ul>
-                        <li><a asp-action="about" asp-controller="home">About</a></li>
-                        <li><a href="~/assets/contact-us.html">Contact Us</a></li>
-                        <li><a href="~/assets/account.html">Login</a></li>
-                        <li><a href="~/assets/faq.html">FAQs</a></li>
-                        <li><a href="~/assets/error-404.html">Error 404</a></li>
-                        <li><a href="~/assets/coming-soon.html">Coming Soon</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="~/assets/blog-classic.html">Blog</a>
-                    <ul>
-                        <li><a href="~/assets/blog-classic.html">Classic</a></li>
-                        <li><a href="~/assets/blog-listing.html">Listing</a></li>
-                        <li>
-                            <a href="~/assets/#">Grid</a>
-                            <ul>
-                                <li><a href="~/assets/blog-grid-2col.html">Grid 2 columns</a></li>
-                                <li><a href="~/assets/blog-grid-3col.html">Grid 3 columns</a></li>
-                                <li><a href="~/assets/blog-grid-4col.html">Grid 4 columns</a></li>
-                                <li><a href="~/assets/blog-grid-sidebar.html">Grid sidebar</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="~/assets/#">Masonry</a>
-                            <ul>
-                                <li><a href="~/assets/blog-masonry-2col.html">Masonry 2 columns</a></li>
-                                <li><a href="~/assets/blog-masonry-3col.html">Masonry 3 columns</a></li>
-                                <li><a href="~/assets/blog-masonry-4col.html">Masonry 4 columns</a></li>
-                                <li><a href="~/assets/blog-masonry-sidebar.html">Masonry sidebar</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="~/assets/#">Mask</a>
-                            <ul>
-                                <li><a href="~/assets/blog-mask-grid.html">Blog mask grid</a></li>
-                                <li><a href="~/assets/blog-mask-masonry.html">Blog mask masonry</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="~/assets/post-single.html">Single Post</a>
-                        </li>
-                    </ul>
+                    <a asp-action="About" asp-controller="Home">Haqqımızda</a>
                 </li>
                 <li>
                     <a href="~/assets/#">Elements</a>
